<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="added_favorite">Added to Favorites</string>
    <string name="app_name">File</string>
    <string name="cancel">Cancel</string>
    <string name="category_all">All</string>
    <string name="category_apk">APKs</string>
    <string name="category_document">Docs</string>
    <string name="category_favorite">Favorites</string>
    <string name="category_music">Music</string>
    <string name="category_other">Misc</string>
    <string name="category_picture">Pics</string>
    <string name="category_theme">Themes</string>
    <string name="category_video">Videos</string>
    <string name="copy_error">Cannot enter the selected file！</string>
    <string name="category_zip">Zips</string>
    <string name="confirm">OK</string>
    <string name="confirm_know">OK</string>
    <string name="enable_sd_card">SD card is not available, please connect one</string>
    <string name="error_info_cant_send_folder">Unable to send the folder</string>
    <string name="fail_to_create_folder">Failed to create the folder, the folder already exists</string>
     <string name="fail_to_create_folder2">Failed to create the folder, invalid file name</string>
    <string name="fail_to_rename">Failed to rename the file or folder as it already exists</string>
    <string name="file_info_canread">Readable:</string>
    <string name="file_info_canwrite">Writable:</string>
    <string name="file_info_ishidden">Hidden:</string>
    <string name="file_info_location">Path:</string>
    <string name="file_info_modified">Modified:</string>
    <string name="file_info_size">Size:</string>
    <string name="file_size">%d Bytes</string>
    <string name="install_failed">Installation failed</string>
    <string name="install_successful">Installation successful</string>
    <string name="instruction">Enter the following address into your FTP Client:</string>
    <string name="instruction_pre">Start service to enable FTP server</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_sort">Sort by</string>
    <string name="menu_item_sort_date">Date</string>
    <string name="menu_item_sort_name">Name</string>
    <string name="menu_item_sort_size">Size</string>
    <string name="menu_item_sort_type">Type</string>
    <string name="new_folder_name">New folder</string>
    <string name="no">No</string>
    <string name="no_file">No files</string>
    <string name="no_wifi">No Wi-Fi network</string>
    <string name="notif_server_starting">FTP Server started</string>
    <string name="notif_title">FTP Server</string>
    <string name="operation_cancel">Cancel</string>
    <string name="operation_cancel_selectall">Deselect All</string>
    <string name="operation_copy">Copy</string>
    <string name="operation_copy_path">Copy file path</string>
    <string name="operation_create_folder">New folder</string>
    <string name="operation_create_folder_message">Enter folder name</string>
    <string name="operation_delete">Delete</string>
    <string name="operation_delete_confirm_message">Confirm Deletion?</string>
    <string name="delete_message">Did not select any folder or file!</string>
    <string name="operation_deleting">Deleting...</string>
    <string name="operation_favorite">Add to Favorites</string>
    <string name="operation_hide_sys">Hide hidden files</string>
    <string name="operation_info">Details</string>
    <string name="operation_move">Move</string>
    <string name="operation_moving">Moving...</string>
    <string name="operation_paste">Paste</string>
    <string name="operation_pasting">Pasting...</string>
    <string name="operation_refresh">Refresh</string>
    <string name="operation_rename">Rename</string>
    <string name="operation_rename_message">Enter a new name</string>
    <string name="operation_selectall">Select All</string>
    <string name="operation_send">Send</string>
    <string name="operation_show_sys">Show hidden files</string>
    <string name="operation_unfavorite">Remove from Favorites</string>
    <string name="removed_favorite">Removed from Favorites</string>
    <string name="sd_folder">SD card</string>
    <string name="search_hint">Search Files</string>
    <string name="search_title">Search Files</string>
    <string name="start_server">Start Service</string>
    <string name="stop_server">Stop Service</string>
    <string name="storage_warning">External storage is not available or cannot be read</string>
    <string name="tab_remote">FTP</string>
    <string name="tab_sd">SD card</string>
    <string name="wifi_state">WLAN Status</string>
    <string name="yes">Yes</string>
    <string name="dialog_select_type">Select file type</string>
    <string name="dialog_type_text">Text</string>
    <string name="dialog_type_audio">Audio</string>
    <string name="dialog_type_video">Video</string>
    <string name="dialog_type_image">Image</string>
    <string name="favorite_photo">Photo</string>
    <string name="favorite_sdcard">SD Card</string>
    <string name="favorite_screen_cap">MIUI Screen Shot</string>
    <string name="favorite_ringtone">Ringtone</string>
    <string name="multi_select_title" >Selected <xliff:g id="number">%1$s</xliff:g> item(s)</string>
    
    <string name="NBCC">Storge</string>
    <string name="USB2">"USB2"</string>
    <string name="USB1">"USB1"</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="text_storage">Storage :</string>
    <string name="filestr">Welcome to FileManager</string>
    <string name="up_one_level">Up level</string>
    <string name="searche_result_txt">..(Result)</string>
    <string name="refurbish">.(Refresh)</string>
    <string name="lastUpdateTime">The last modified time</string>
    <string name="searchhinttxt">Search</string>
    <string name="quxiao">Cancel</string>
    <string name="queding">Confirm</string>
    <string name="baocun">Save</string>
    <string name="newfoldertxt">New Folder</string>
    <string name="newfoldertxt_et">Import New Folder</string>
    <string name="newfolderhinttxt">New Folder</string>
    <string name="tools_xinjian">New</string>
    <string name="tools_shuaxin">Refresh</string>
    <string name="tools_paixu">Sort</string>
    <string name="tools_quanxuan">Select All</string>
    <string name="tools_fuzhi">Copy</string>
    <string name="tools_jianqie">Cut</string>
    <string name="tools_shuxing">Details</string>
    <string name="tools_chongmingming">Rename</string>
    <string name="tools_shanchu">Delete</string>
    <string name="tools_quxiao">Cancel</string>
    <string name="tools_zhantie">Paste</string>
    <string name="tools_sortbyname">By Name</string>
    <string name="tools_sortbysize">By Size</string>
    <string name="tools_sortbytime">By Date</string>
    <string name="tools_sortbytype">By Type</string>
    <string name="dialog_covermemo">Name already exists, whether to cover？</string>
    <string name="dialog_yuanwenjian">The source file：</string>
    <string name="dialog_mubiaowenjian">The target file：</string>
    <string name="dialog_daxiao">Size：</string>
    <string name="dialog_yingyongquanbu">Applied to all</string>
    <string name="dialog_title_fugai">Cover</string>
    <string name="toast_newfolder">The current directory cannot create the folder !</string>
    <string name="toast_xuanzhewenjian">Please select a file！</string>
     <string name="toast_writeforbid">The current  cannot write !</string>
    <string name="toast_onlyone">Only to rename a file！</string>
     <string name="toast_zuishao_one">Select at least one！</string>
    <string name="toast_jianqie">Cut success！</string>
    <string name="toast_fuzhi">Copy success！</string>
    <string name="toast_bachu">Operation termination！</string>
    <string name="toast_onlyone_text">The folder or file name cannot be more than 25 words！</string>
    <string name="toast_docopy">Current ongoing copying files, please wait a moment</string>
    <string name="toast_docut">The current is moving files, please wait a moment</string>
    <string name="toast_qingshuruname">Please enter the file name</string>
    <string name="toast_lengthlimit">File name cannot be more than 25 words</string>
    <string name="toast_folderlengthlimit">The folder name cannot be more than 25 words</string>
    <string name="toast_hassame">The existing file the same name！</string>
    <string name="toast_hassamefolder">Folder name already exists！</string>
    <string name="toast_renamesucess">Rename the success！ </string>
    <string name="toast_newfoldersucess">Create folder successfully！ </string>
    <string name="toast_newfoldererr">Failed to create the folder！ </string>
    <string name="toast_cutsucess">Cut success！ </string>
    <string name="toast_delsucess">Deleted success! </string>
    <string name="toast_copysucess">The specified file copy success ! </string>
    <string name="toast_delcofirm">Sure to delete the selected file？</string>
    <string name="toast_zhantie">Paste the file </string>
    <string name="toast_zhantiefugai">Under this directory file with the same, whether to need to cover？</string>
    <string name="dialog_filename">Name：</string>
    <string name="dialog_filepath">Location：</string>
    <string name="dialog_filesize">Size：</string>
    <string name="dialog_filetime">Date：</string>
    <string name="dialog_fileisread">Read：</string>
    <string name="dialog_fileiswrite">Write：</string>
    <string name="toast_kongjianbuzu">There is insufficient space on the left to complete the operation</string>
    <string name="toast_chaxunguanjianzi">Please enter a query keywords！</string>
    <string name="toast_nofound">Not a match is found！</string>
    <string name="toast_shuruname">Please enter a folder name</string>
    <string name="text_neibucunchu">Internal storage </string>
    <string name="text_waibucunchu">External storage </string>
    <string name="text_wancheng100">Complete 100%</string>
    <string name="text_wancheng0">Complete 0%</string>
    <string name="text_wancheng">Complete</string>
    <string name="text_chazhaojieguo">The results of the lookup..</string>
    <string name="text_title_del">Delete the file</string>
    <string name="text_title_fugai">Cover</string>
    <string name="text_title_rename">Rename</string>
    <string name="text_title_xiangxi">Detail</string>
    <string name="text_title_tiaoguo">Skip</string>
    <string name="text_shi">Yes</string>
    <string name="text_fou">No</string>
    
      <string name="text_storage_name_flash_path" >Internal Storage</string>
     <string name="text_storage_name_ext_sdcard2">SD</string>
    <string name="text_storage_name_udisk1">USB1</string>
    <string name="text_storage_name_udisk2">USB2</string>
    <string name="text_storage_name_udisk3">USB3</string>
    
</resources>