<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lLayout_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_dialog_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="120px"
            android:layout_marginTop="75px"
            android:gravity="center"
            android:text="@string/newfoldertxt"
            android:textColor="#00ffff"
            android:textSize="30px" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_addmemo_Group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15px"
        android:gravity="center_horizontal"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40px"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/btn_neg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/dialog_btn_bg_selector"
            android:gravity="center"
            android:onClick="closedialog"
            android:text="@string/quxiao"
            android:visibility="gone"
            android:textColor="#000000"
            android:textSize="30px" />

        <TextView
            android:id="@+id/btn_pos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30px"
            android:background="@drawable/dialog_btn_bg_selector"
            android:gravity="center"
            android:onClick="confirm"
            android:text="@string/queding"
            android:visibility="gone"
            android:textColor="#000000"
            android:textSize="30px" />
    </LinearLayout>

</LinearLayout>