<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activtiyLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/device_name"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="18px" />

        <EditText
            android:id="@+id/search_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:background="@drawable/search_bg"
            android:cursorVisible="false"
            android:focusable="true"
            android:imeOptions="actionSearch"
            android:maxLength="10"
            android:paddingLeft="7dp"
            android:singleLine="true"
            android:textColor="#ffffff"
            android:textSize="18px"
            android:windowSoftInputMode="adjustUnspecified|stateHidden" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0px"
                android:background="@null"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="visible" >

                <LinearLayout
                    android:id="@+id/upOnLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/return_bg"
                    android:clickable="false"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <ImageButton
                        android:id="@+id/file_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/back_n"
                        android:clickable="false"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/bt_lastpath"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30px"
                        android:clickable="false"
                        android:gravity="center"
                        android:text="@string/up_one_level"
                        android:textColor="#909090"
                        android:textSize="15px" />
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/buttom_toolsaction"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                >

                <Button
                    android:id="@+id/bt_paste"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="60px"
                    android:background="#00000000"
                    android:drawableTop="@drawable/btstate_paste_img"
                    android:text="@string/tools_zhantie"
                    android:textColor="@drawable/textstate_color"
                    android:textSize="18px" />

                <Button
                    android:id="@+id/bt_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20px"
                    android:layout_alignLeft="@+id/bt_paste"
                    android:layout_below="@+id/bt_paste"
                    android:background="#00000000"
                    android:drawableTop="@drawable/btstate_cancel_img"
                    android:text="@string/tools_quxiao"
                    android:textColor="@drawable/textstate_color"
                    android:textSize="18px" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/buttom_tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="60px"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/bt_selectall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:drawableTop="@drawable/tools_check_selectnone"
                        android:text="@string/tools_quanxuan"
                        android:textColor="@drawable/textstate_color"
                        android:textSize="18px" />

                    <Button
                        android:id="@+id/bt_copy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:drawableTop="@drawable/btstate_copy_img"
                        android:text="@string/tools_fuzhi"
                        android:textColor="@drawable/textstate_color"
                        android:textSize="18px" />

                    <Button
                        android:id="@+id/bt_cut"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:drawableTop="@drawable/btstate_cut_img"
                        android:text="@string/tools_jianqie"
                        android:textColor="@drawable/textstate_color"
                        android:textSize="18px" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="110px"
                    android:layout_marginTop="60px"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/bt_rename"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:drawableTop="@drawable/btstate_rename_img"
                        android:text="@string/tools_chongmingming"
                        android:textColor="@drawable/textstate_color"
                        android:textSize="18px" />

                    <Button
                        android:id="@+id/bt_del"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:drawableTop="@drawable/btstate_del_img"
                        android:text="@string/tools_shanchu"
                        android:textColor="@drawable/textstate_color"
                        android:textSize="18px" />

                    <Button
                        android:id="@+id/bt_cancel_tohome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:drawableTop="@drawable/btstate_cancel_img"
                        android:text="@string/tools_quxiao"
                        android:textColor="@drawable/textstate_color"
                        android:textSize="18px" />
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/buttom_home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <ImageButton
                    android:id="@+id/bt_sort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="60px"
                    android:background="@drawable/btstate_sort_img" />

                <ImageButton
                    android:id="@+id/btrefresh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20px"
                    android:background="@drawable/btstate_refresh_img" />

                <ImageButton
                    android:id="@+id/bt_newfolder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20px"
                    android:background="@drawable/btstate_newfolder_img" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/file_browse_frame"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="40px"
            android:layout_weight="3.5"
            android:orientation="vertical" >

            <ListView
                android:id="@+id/file_path_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:footerDividersEnabled="true"
                android:headerDividersEnabled="true" />

            <LinearLayout
                android:id="@+id/empty_view"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/empty_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/no_file"
                    android:textSize="27px" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>